Fix click events on mobile

--- a/src/fragments/common.css
+++ b/src/fragments/common.css
@@ -164,6 +164,11 @@ a {
     }
   }
   /* button helpers*/
+
+  .noLink {
+    pointer-events: none;
+    cursor: default;
+  }
 }
 
 /*media queries*/
